features ranking for futher fine tuning to build the model

--- a/second-project/AIML_ML_Project_full_code_notebook.ipynb
+++ b/second-project/AIML_ML_Project_full_code_notebook.ipynb
@@ -472,8 +472,45 @@
       "metadata": {
         "id": "N5-9mneBiVE8"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "              Feature  Importance\n",
+            "6  Securities_Account    0.004262\n",
+            "8              Online    0.007173\n",
+            "9          CreditCard    0.008936\n",
+            "5            Mortgage    0.033078\n",
+            "0                 Age    0.046849\n",
+            "7          CD_Account    0.052056\n",
+            "2              Family    0.117618\n",
+            "3               CCAvg    0.164211\n",
+            "4           Education    0.222913\n",
+            "1              Income    0.342904\n"
+          ]
+        }
+      ],
+      "source": [
+        "#checking existing feature rankings for further fine tuning.\n",
+        "model = RandomForestClassifier()\n",
+        "model.fit(X, y)\n",
+        "feature_importances = model.feature_importances_\n",
+        "\n",
+        "#DataFrame to display features with their importance\n",
+        "importance_df = pd.DataFrame({\n",
+        "    'Feature': X.columns,\n",
+        "    'Importance': feature_importances\n",
+        "})\n",
+        "\n",
+        "# Sorting by importance\n",
+        "importance_df = importance_df.sort_values(by='Importance', ascending=True)\n",
+        "\n",
+        "# Display least important features\n",
+        "print(importance_df)\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
